--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,1 +1,60 @@
-<p>teams works!</p>
+<div class="container">
+  <div class="row p-3">
+    <div class="col-lg-8">
+      <table dense style="width: 100%" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
+        <ng-container matColumnDef="options">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Opciones</th>
+          <td mat-cell *matCellDef="let element">
+            <button (click)="onEdit(element)" mat-icon-button color="primary"
+                    aria-label="Example icon button with a home icon">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button (click)="onDelete(element)" mat-icon-button color="warn"
+                    aria-label="Example icon button with a home icon">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="championships">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Campeonatos</th>
+          <td mat-cell *matCellDef="let element"> {{element.championships}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+    <div class="col-lg-4">
+      <mat-card>
+        <mat-card-title>Registro Equipos</mat-card-title>
+        <form [formGroup]="formGroup">
+          <mat-card-content>
+            <mat-form-field>
+              <mat-label>Nombre</mat-label>
+              <input matInput formControlName="name" placeholder="Ex. Pizza">
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+              <mat-label>Campeonatos</mat-label>
+              <input matInput formControlName="championships" type="number" placeholder="Ex. Pizza">
+            </mat-form-field>
+          </mat-card-content>
+          <mat-card-actions>
+            <button class="mr-3" (click)="onSaveUser()" mat-mini-fab color="warn"
+                    aria-label="Example icon button with a bookmark icon">
+              <mat-icon>bookmark</mat-icon>
+            </button>
+            <button (click)="formGroup.reset();selectedTeam=null;" mat-mini-fab color="primary"
+                    aria-label="Example icon button with a bookmark icon">
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-card-actions>
+        </form>
+      </mat-card>
+    </div>
+  </div>
+</div>
