--- a/src/app/app-container/app-container.component.html
+++ b/src/app/app-container/app-container.component.html
@@ -1,3 +1,17 @@
+<div
+  style="min-height: 2.5rem; padding-right: 1rem; width: 100%; background-color: black; display: flex; justify-content: flex-end;">
+  <div>
+    <div style="color: #F5F5F6">
+      Hola, <b>{{userData.name}}</b>
+    </div>
+    <div style="color: #F5F5F6">
+      {{userData.rol}}
+    </div>
+  </div>
+  <button (click)="signOut()" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+    <mat-icon style="color: #F5F5F6">power_settings_new</mat-icon>
+  </button>
+</div>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Usuarios">
     <app-users></app-users>
