--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,23 @@
-<p>sign-in works!</p>
+<div class="sing_in_container">
+  <mat-card>
+    <mat-card-title>Inicio de Sesión</mat-card-title>
+    <form [formGroup]="formGroup">
+      <mat-card-content style="position:relative;">
+        <div style=" display: flex; justify-content: center;height: 10rem;">
+          <mat-icon aria-hidden="false" class="icon-display">account_circle</mat-icon>
+        </div>
+        <mat-form-field>
+          <mat-label>Usuario</mat-label>
+          <input formControlName="email" matInput/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Contraseña</mat-label>
+          <input formControlName="password" type="password" matInput/>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions style="display:flex; justify-content:flex-end;align-items: center">
+        <button (click)="onLogin()" mat-button color="primary">Ingresar</button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
